--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGODB_URI="mongodb+srv://syedbabarali640:aIkKcHZoNdZSL1ks@cluster0.pezd48p.mon
 JWT_SECRET_KEY=mysupersecurekey12345
 FRONTEND_URL=http://localhost:5173
 # FRONTEND_URL=http://localhost:5173,https://todo-backend-zeta-topaz.vercel.app
+JWT_SECRET=mysecretkey
